# CUDA

./: .gitignore  README.md  add_user.sh  users.txt
CUDA_Tutorial/: READ.me  gmm.py
CUDA_Tutorial/day01/: add_simple  add_simple.cu  add_vector_blocks  add_vector_blocks.cu  add_vector_combine  add_vector_combine.cu  add_vector_combine_size  add_vector_combine_size.cu  add_vector_shared  add_vector_shared.cu  add_vector_shared_wrong  add_vector_shared_wrong.cu  add_vector_threads  add_vector_threads.cu  comp_shared  comp_shared.cu  hello_world  hello_world_cuda  hello_world_cuda.cu
CUDA_Tutorial/day02/: add_vector_numba.py  add_vector_torch.py  check_tf.py  cuda_cupy.py  ex01_pycuda.py  image_save.py  mnist_model05.h5  mnist_model05.keras  mnist_tf.py  pmpp_block.py  pmpp_cu.py  pmpp_emulate.py  pmpp_numba.py  pmpp_py.py  tf_tutorial_05.py
CUDA_Tutorial/day02/mnist_model05/: fingerprint.pb  saved_model.pb
CUDA_Tutorial/day03/: READ.me  check_cuda.py  dataset_loader.ipynb  dataset_loader.py  dataset_model.ipynb  dataset_train.ipynb  introduction.ipynb  model.pth  plot_test.ipynb  quickstart01.py  simple_model.ipynb  tensors.py
CUDA_Tutorial/day04/: READ.me
CUDA_Tutorial/tutorial01/: hello  hello.cu  vector_add  vector_add.cu  vector_add_grid  vector_add_grid.cu
Python/: VectorAdd.ipynb
VS/CudaRuntime01/: CudaRuntime01.sln
VS/CudaRuntime01/CudaRuntime01/: CudaRuntime01.vcxproj  (+1 more)
ijutils/: =61.0  LICENSE  README.md  pyproject.toml
ijutils/ijutils/: __init__.py
ijutils/ijutils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nvidia_examples/: numba_use.py
(+4 files in other folders)
